added a new line

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>The New Revolution<br>
-        Initial Commit<br>
-    </p>
-    
+    <h1>This is my first page</h1>
+    <h1>This is my first page</h1>
+    <h1>This is my first page</h1>
 </body>
 </html>
